# google-music-manager-uploader

./: .gitignore  CONTRIBUTING.md  Makefile  README.rst  setup.cfg
.github/: ISSUE_TEMPLATE.md
google_music_manager_uploader/: __init__.py  deduplicate.py  manager.py  uploader_daemon.py
